Archive2/ae/1b91edf2256a51/output
main.cpp:5:9: error: templates cannot be declared inside of a local class
        template<typename T>
        ^~~~~~~~~~~~~~~~~~~~
1 error generated.
