Archive2/ae/1b91edf2256a51/main.cpp
void foo()
{
    struct bar
    {
        template<typename T>
        void operator()(T x)
        {
        }
    };
}